tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/leading-point-plus.stderr
TOML parse error at line 1, column 23
  |
1 | leading-point-plus = +.12345
  |                       ^
invalid integer
